--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       }
 
     </style>
-    <link rel="shortcut icon" href="https://img.icons8.com/flat_round/50/000000/star.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favi.png" type="image/x-icon">
   </head>
   <body>
     <div class="container"></div>
