--- a/index.html
+++ b/index.html
@@ -420,13 +420,13 @@
               <!-- 슬라이드 이미지 -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/img/s1.jpg" alt="pic1" class="d-block w-100" />
+                  <img src="/img/team1.jpg" alt="pic1" class="d-block w-100" />
                 </div>
                 <div class="carousel-item">
-                  <img src="/img/s2.jpg" alt="pic2" class="d-block w-100" />
+                  <img src="/img/team2.jpg" alt="pic2" class="d-block w-100" />
                 </div>
                 <div class="carousel-item">
-                  <img src="/img/s3.jpg" alt="pic3" class="d-block w-100" />
+                  <img src="/img/team3.jpg" alt="pic3" class="d-block w-100" />
                 </div>
               </div>
               <!-- 왼쪽 오른쪽 화살표 -->
